--- a/user/src/pages/Scan/ScanQR.css
+++ b/user/src/pages/Scan/ScanQR.css
@@ -344,7 +344,7 @@
   height: 100% !important;
 }
 
-#reader > div {
+#reader div {
   width: 100% !important;
   height: 100% !important;
 }
